crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__manifest__tests__add_dependency.snap
---
source: crates/pixi_manifest/src/manifests/manifest.rs
expression: manifest.document.to_string()
---
[project]
name = "foo"
channels = []
platforms = ["linux-64", "win-64"]

[dependencies]
foo = "*"
baz = ">=1.2.3"

[feature.test.dependencies]
bar = "*"
bal = ">=2.3"

[feature.extra.target.linux-64.dependencies]
boef = ">=2.3"

[feature.build.target.linux-64.build-dependencies]
cmake = ">=2.3"
