crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__manifest__tests__supported_pep508_url.snap
---
source: crates/pixi_manifest/src/manifests/manifest.rs
expression: "pypi_reqs[0]"
---
{ git = "git+ssh://git@github.com/python-attrs/attrs.git", rev = "main" }
