crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__manifest__tests__test_remove_bar.snap
---
source: crates/pixi_manifest/src/manifests/manifest.rs
expression: manifest.document.to_string()
---
            [project]
            name = "foo"
            version = "0.1.0"
            channels = []
            platforms = ["linux-64", "win-64"]

            [dependencies]
            fooz = "*"

            [target.linux-64.build-dependencies]
            baz = "*"
